Settings: Add Substratum to dashboard
Launcher code taken from the SuperSU commit updated by Mat Pls

Also remove the substratum tile if it's not installed.

Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -187,6 +187,22 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="Settings$SubstratumActivity"
+                android:label="@string/substratum_title"
+                android:icon="@drawable/ic_settings_substratum"
+                android:taskAffinity="" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <intent-filter android:priority="1">
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.Substratum" />
+        </activity>
+
         <!-- Wireless Controls -->
 
         <activity android:name="Settings$WirelessSettingsActivity"
