Fix substratum tile

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -199,6 +199,8 @@
             <intent-filter android:priority="1">
                 <action android:name="com.android.settings.action.SETTINGS" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.advanced" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.Substratum" />
         </activity>
